# foxtrot

./: Cargo.toml  readme.md
.cargo/: config_release.toml  config_web.toml
.github/workflows/: ci.yaml  release.yaml
assets/maps/volta_i/: volta_i.nav
src/: asset_tracking.rs  hdr.rs  main.rs  shader_compilation.rs
src/audio/: mod.rs  perceptual.rs
src/dev_tools/: debug_ui.rs  generate_navmesh.rs  input.rs  log_components.rs  mod.rs  navmesh_gizmo.rs  validate_preloading.rs
src/gameplay/: animation.rs  level.rs
src/gameplay/crosshair/: assets.rs  mod.rs
src/gameplay/npc/: ai.rs  animation.rs  assets.rs  mod.rs  sound.rs
src/gameplay/player/: animation.rs  assets.rs  camera.rs  default_input.rs  mod.rs  movement.rs  movement_sound.rs  navmesh_position.rs
src/gameplay/player/dialogue/: mod.rs  ui.rs
src/gameplay/player/pickup/: collision.rs  input.rs  sound.rs  ui.rs
src/menus/: credits.rs  main.rs  pause.rs  settings.rs
src/props/: effects.rs  generic.rs  setup.rs
src/props/brush_entity/: light_window.rs
src/props/specific/: burning_logs.rs  chair.rs  crate_.rs  lamp_plain.rs  lamp_shaded.rs  lamp_sitting.rs  lamp_wall_electric.rs
src/screens/: gameplay.rs  splash.rs
src/screens/loading/: preload_assets.rs  shader_compilation.rs  spawn_level.rs
src/theme/: interaction.rs  widget.rs
