[package]
name = "foxtrot"
description = "A 3D reference project and tech demo for the Bevy Engine."
license = "MIT OR Apache-2.0 OR CC0-1.0"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
version = "0.1.0"
edition = "2024"
exclude = ["assets"]
readme = "readme.md"
keywords = ["bevy", "demo", "3d", "game"]
repository = "https://github.com/janhohenheim/foxtrot"
categories = ["game-development"]
homepage = "https://janhohenheim.itch.io/foxtrot"

[dependencies]
bevy = { version = "0.17.0", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_anti_alias",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui_render",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "jpeg",
    "tga",
    "ktx2",
    "png",
    "wayland",
    "zstd_rust",
    "reflect_auto_register"
] }
bevy_enhanced_input = "0.19.0"

# physics
avian3d = "0.4.0"
avian_pickup = "0.3.0"

# character controller
bevy-tnua = "0.26"
bevy-tnua-avian3d = "0.7"

# navigation
bevy_landmass = "0.10.0"
landmass_rerecast = "0.1.0"
bevy_rerecast = { version = "0.3.0", default-features = false }
avian_rerecast = "0.3.0"

# Level editor
bevy_trenchbroom = { version = "0.10", features = ["avian"] }

# dialogue
bevy_yarnspinner = "0.6.0-rc"
bevy_yarnspinner_example_dialogue_view = "0.6.0-rc"

bevy_shuffle_bag = "0.3.0"

# Keep this in sync with Bevy
rand = "0.9"

# Compile low-severity logs out of web builds for performance.
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
getrandom = { version = "0.3", default-features = false, features = [
    "wasm_js",
] }
bevy_mod_skinned_aabb = "0.3.0"

bitflags = "2.9.1"
anyhow = "1.0.99"
bevy-inspector-egui = { version = "0.34", optional = true }
bevy_fix_cursor_unlock_web = "0.2.0"
regex = "1.11.1"
bevy_framepace = "0.20.0-rc"
bevy_seedling = "0.6.0"
bincode = "2"
# Latest version that works with bevy_seedling
wasm-bindgen = { version = "=0.2.101", optional = true }

bevy_hanabi = { version = "0.17.0", default-features = false, features = [
    "3d",
    "gpu_tests",
] }

[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
native = []
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    # Improve error messages coming from Bevy
    "bevy/track_location",
    "dep:bevy-inspector-egui",
    "avian3d/diagnostic_ui",
    "bevy_rerecast/debug_plugin",
    "bevy_rerecast/editor_integration",
]
dev_native = [
    "dev",
    "native",
    "bevy/bevy_remote",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
    "bevy_rerecast/editor_integration",
]
web = ["bevy/webgpu", "bevy_seedling/web_audio", "dep:wasm-bindgen"]
release = []

[package.metadata.bevy_cli]
default-features = false

[package.metadata.bevy_cli.native]
features = ["native"]

[package.metadata.bevy_cli.native.dev]
features = ["dev_native"]

[package.metadata.bevy_cli.native.release]
features = ["release"]

[package.metadata.bevy_cli.web]
features = ["web"]

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

[package.metadata.bevy_cli.web.release]
features = ["release"]

[package.metadata.bevy_cli.unstable]
web-multi-threading = true

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"


# Compile with Performance Optimizations:
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.release.package.wgpu-types]
debug-assertions = false

[patch.crates-io]
# Not released yet
bevy_trenchbroom = { git = "https://github.com/Noxmore/bevy_trenchbroom", branch = "bevy-0.17" }
# Not released yet
bevy_framepace = { git = "https://github.com/aevyrie/bevy_framepace" }
# Fix [crash on Chromium](https://github.com/CorvusPrudens/bevy_seedling/issues/60)
firewheel-web-audio = { git = "https://github.com/CorvusPrudens/firewheel-web-audio", rev = "65888f3" }
# Rewest versions
firewheel = { git = "https://github.com/BillyDM/firewheel" }
bevy_seedling = { git = "https://github.com/corvusprudens/bevy_seedling", branch = "v0.6.0" }
